--- a/menu-adm.html
+++ b/menu-adm.html
@@ -17,7 +17,7 @@
             <a href="index.html">
                 <img src="img/Logo.png" alt="Logo do AluraGeek" class="container__logo">
             </a>  
-            <button class="button__adm">Menu administrador</button>
+            <button class="button__adm"><a href="todosProdutos.html" class="menu__adm">Menu administrador</a></button>
             <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input" data-pesquisa>
             <img src="img/search.png" alt="Imagem de uma lupa" class="search__lupa">
         </div>
@@ -27,12 +27,12 @@
         <h2 class="main__descricao">Adicionar novo produto</h2>
         
         <form class="main__div" data-formulario>
-            <input type="text" class="input__text" id="" data-imagem>
-            <input type="text" class="input__text" id="" data-categoria>
-            <input type="text" class="input__text" id="" data-produtoName>
-            <input type="number" class="input__text" id="" data-preco>
-            <input type="text" class="input__text" id="" data-descricao>
-            <input type="submit" class="input__button" id="" value="Adicionar produto" data-submit>
+            <input type="text" class="input__text" data-imagem>
+            <input type="text" class="input__text" data-categoria>
+            <input type="text" class="input__text" data-produtoName>
+            <input type="number" class="input__text" data-preco>
+            <input type="text" class="input__text" data-descricao>
+            <input type="submit" class="input__button" value="Adicionar produto" data-submit>
         </form>
 
     </main>
@@ -65,7 +65,6 @@
             <p>Em 2023</p>
         </div>
     </footer>
- <script src="js/criaProduto.js" type="module"></script>   
-
+    <script src="js/criaProduto.js" type="module"></script>
 </body>
 </html>
