--- a/todosProdutos.html
+++ b/todosProdutos.html
@@ -17,7 +17,7 @@
                 <img src="img/Logo.png" alt="Logo do AluraGeek" class="container__logo">
             </a>  
             <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input" data-pesquisa>
-            <img src="img/search.png" alt="Imagem de uma lupa" class="search__lupa">
+            <button class="search__lupa">Pesquisar</button>
         </div>
     </header>
 
@@ -65,6 +65,8 @@
         </div>
     </footer>
 
+    <script src="js/conectaApi.js" type="module"></script>
     <script src="js/mostrarProdutos.js" type="module"></script>
+    <script src="js/pesquisar.js" type="module"></script>
 </body>
 </html>
